# Imgus

./: .gitignore  CMakeLists.txt  LICENSE  README.md  additional_headers  forward-declaration.h  forward-declaration.hpp  forward-headers.hpp  main.cpp
Common/: gui.h  image-operation.h  tools.h
Common/bitmap/: bitmap_image.hpp
Projects/1/1/: operation.cpp
Projects/1/2/: operation.cpp
Projects/1/3/: operation.cpp
Projects/1/4/: operation.cpp
common/: common.hpp  gui.hpp  images.hpp
doc/: Dokumentacja.aux  Dokumentacja.tex
operations/1/1/: operation.cpp
operations/1/2/: operation.cpp
operations/1/3/: operation.cpp
operations/1/4/: operation.cpp
src/common/: common.hpp
src/common/formats/: PNG.cpp  PNG.hpp
src/common/windows/: QT.cpp  QT.hpp
src/formats/: PNG-decoder-encoder.cpp  PNG-decoder-encoder.h  PNG-manually.cpp  PNG-manually.h
src/headers/: common.h  exceptions.h  format.h  image.h  main.h  operation.h  operations.h  point.h  window.h  windows.h
src/operations/: blending.cpp  close.cpp  copy.cpp  cut.cpp  dilatation.cpp  division.cpp  erosion.cpp  exponentiation.cpp  global-thresholding.cpp  gradient.cpp  highpass.cpp  histogram.cpp  local-thresholding.cpp  log.cpp  lowpass.cpp  mediana.cpp  move.cpp  multi-thresholding.cpp  multiplication.cpp  nthRoot.cpp  open.cpp  operations.hpp  stretching.cpp  sum.cpp
src/operations/1/ImageNegation/: operation.cpp
src/operations/1/LogicalSumPaintings/: operation.cpp
src/operations/1/ProductOfLogicalPaintings/: operation.cpp
src/operations/1/XOROperation/: operation.cpp
src/operations/ImageNegation/: operation.cpp
src/operations/LogicalSumPaintings/: operation.cpp
src/operations/ProductOfLogicalPaintings/: operation.cpp
src/operations/XOROperation/: operation.cpp
src/windows/: QT.cpp  QT.h
